Fix alignment of contact me paragraph

--- a/style.css
+++ b/style.css
@@ -251,6 +251,8 @@ nav {
   font-size: 20px;
   margin-bottom: 1.2rem;
   text-align: center;
+  text-align: center;
+  padding: 1rem;
 }
 
 .contact form {
